--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,33 +1,103 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="UTF-8">
-<title>show User info</title>
+    <meta charset="UTF-8">
+    <title>User page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <body>
-<label>User information:</label>
-<table border="2">
-    <tr>
-        <th>id</th>
-        <th>username</th>
-        <th>name</th>
-        <th>lastname</th>
-        <th>age</th>
-        <th>email</th>
-        <th>roles</th>
-    </tr>
-    <tr th:object="${user}">
-        <td th:text="*{getId()}"/>
-        <td th:text="*{getUsername()}"/>
-        <td th:text="*{getName()}"/>
-        <td th:text="*{getLastname()}"/>
-        <td th:text="*{getAge()}"/>
-        <td th:text="*{getEmail()}"/>
-        <td th:text="*{getRoles()}"/>
-    </tr>
-</table>
-<form th:action="@{/login}" th:method="POST">
-    <input type="submit" value="Logout"/>
-</form>
+<!-- Чёрная шапка страницы -->
+<header>
+    <div class="container-fluid" style="padding: 0">
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                    <!-- Контент для шапки: роль авторизованного пользователя + logout -->
+                    <div class="collapse navbar-collapse" id="user">
+                        <div class="container-fluid">
+                            <a class="navbar-brand">
+                                <span class="align-middle text-nowrap font-weight-bold" id="headerUsername"></span>
+                                <span class="align-middle text-nowrap">with roles: </span>
+                                <span class="align-middle text-nowrap" id="headerRoles"></span>
+                            </a>
+                        </div>
+                        <div class="text-right">
+                            <form class="d-flex" th:action="@{/logout}" th:method="POST">
+                                <button class="btn btn-dark text-secondary" type="submit"><strong>Logout</strong>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- Основной контент страницы -->
+<div class="container-fluid h-100">
+    <div class="row h-100">
+
+        <!-- Кнопка слева User -->
+        <div class="col-2">
+            <br>
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#userPanel">User</a>
+                </li>
+            </ul>
+        </div>
+        <!-- Панель справа -->
+        <div class="col-10">
+            <div class="container-fluid">
+                <h1>User information-page</h1>
+                <div class="tab-pane fade show active" id="userPanel" role="tabpanel" aria-labelledby="users-tab">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="m-1">
+                                <h3>About user</h3>
+                            </div>
+                        </div>
+                        <div class="card-body bg-white" >
+                            <!--таблица юзера-->
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Username</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Age</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                </tr>
+                                </thead>
+                                <tbody id="userPanelBody">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+        crossorigin="anonymous"></script>
+
+<!-- JS -->
+<script type="text/javascript" src="/appUser.js"></script>
 </body>
 </html>
